2004-08-04  Will Duquette  <will@wjduquette.com>

	* snitfaq.man   Updated the Snit FAQ document.

	* snit.man      Finalized Snit V0.95, and updated the version number
	* snit.tcl      throughout.
	* pkgIndex.tcl
	* README.txt

2004-07-27  Will Duquette  <will@wjduquette.com>

	* snit.man      Updated the manpage to describe the new "pragma"
	                statement.  Also, changed the SNIT acronym in the
	                title to "Simple Now In Tcl", i.e., objects are
	                now simple.

	* snit.tcl	Added another pragma, -canreplace.  If false
	* snit.test     (the default) snit::types can no longer create
	* README.txt    instances which replace existing Tcl commands.
	* snit.man      Setting "pragma -canreplace yes" restores the
	* dictionary    previous behavior.

	* snit.tcl	The type definition statements "variable" and
	* snit.test     "typevariable" now take a "-array" option that
	* README.txt    allows them to initialize array variables with
	* snit.man      an "array set" list.

	* snit.test     Fixed Snit bug 899207 (snit test failures)

	* snit.tcl	Added new instance introspection methods 
	* snit.test   	"info typemethods" and "info methods", and a new
	* README.txt    type introspection typemethod "info typemethods".
	* snit.man      
	* roadmap.txt

	* snit.man      Reviewed the entire man page, and made copious
	                changes and fixes.

	* snit.tcl	Revised many of the error messages to be more 
	* snit.test     Tcl/Tk-like.  Double-quotes are used instead of
			single quotes, and terminal periods are omitted.
	
	* snit.tcl	Added some code to method and typemethod dispatch
	* snit.test	so that the return code (e.g., return -code break)
			returned by the method/typemethod code is passed
			along unchanged.  This is mostly so that methods
			and typemethods can conditionally break in event 
			bindings.
	
2004-07-26  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Implemented -configuremethod and configure command