@@ -1,3 +1,3 @@
 if {![package vsatisfies [package provide Tcl] 8.4]} {return}
-package ifneeded snit 0.95 \
+package ifneeded snit 0.96 \
     [list source [file join $dir snit.tcl]]
